--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
   <!-- Remix Icon Cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css"/>
+
+  <!-- Animate on Scorll Css File Link -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- Css File Link -->
   <link rel="stylesheet" href="./style.css">
   <!-- Responsive File Link -->
@@ -59,7 +62,8 @@
   <!-- Hero Section Start -->
   <section class="hero-section">
     <div class="container">
-      <div class="hero-content">
+      <div class="hero-content" data-aos="fade-up"
+      data-aos-duration="1000">
         <h1>Health Care</h1>
         <h2>For Hole Family</h2>
         <p>In healthcare sector, service Excellence is the facilty of <br> the hospital as healthcare service provider to consistently.</p>
@@ -73,19 +77,24 @@
   <section class="service-section">
     <div class="container">
       <div class="service-wrapper">
-        <div class="service-item-box">
+        <div class="service-item-box" data-aos="fade-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine">
           <i class="fa-solid fa-heart-pulse"></i>
           <h3>Hospitality</h3>
           <p>Clinical excellence must be the priority for any health care service provider.</p>
           <button>Apply For A Bed</button>
         </div>
-        <div class="service-item-box dule-color">
+        <div class="service-item-box dule-color" data-aos="fade-up"
+        data-aos-duration="1000">
           <i class="fa-solid fa-phone-flip"></i>
           <h3>Emergency Care</h3>
           <p>Clinical excellence must be the priority for any health care service provider.</p>
           <button>+10 999 987 4321</button>
         </div>
-        <div class="service-item-box">
+        <div class="service-item-box" data-aos="fade-left"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine">
           <i class="ri-first-aid-kit-line"></i>
           <h3>Chamber Service</h3>
           <p>Clinical excellence must be the priority for any health care service provider.</p>
@@ -100,7 +109,9 @@
   <section class="welcome-section">
     <div class="container">
       <div class="welcome-wrapper">
-        <div class="welcome-img-box">
+        <div class="welcome-img-box"
+        data-aos="fade-up"
+        data-aos-duration="1000">
           <div class="thumb-1">
             <img src="./img/welcome-img-1.webp" alt="">
           </div>
@@ -108,7 +119,8 @@
             <img src="./img/welcome-img-2.webp" alt="">
           </div>
         </div>
-        <div class="welcome-content-box">
+        <div class="welcome-content-box" data-aos="fade-left"
+        data-aos-duration="1000">
           <h4>Welcome to Docmed</h4>
           <h2>Best Care For Your
             Good Health</h2>
@@ -128,12 +140,16 @@
   <!-- Department Section Start -->
   <section class="department-section">
     <div class="container">
-      <div class="title-box">
+      <div class="title-box" 
+      data-aos="fade-up"
+      data-aos-duration="1000">
         <h2>Our Departments</h2>
         <p>Esteem spirit temper too say adieus who direct esteem.
           It esteems luckily or picture placing drawing.</p>
       </div>
-      <div class="depart-wrapper">
+      <div class="depart-wrapper" 
+      data-aos="fade-up"
+      data-aos-duration="1500">
         <div class="item-box">
           <img src="./img/departments-img-1.png" alt="">
           <div class="depart-content">
@@ -203,14 +219,18 @@
   <section class="tabs-section">
     <div class="container">
       <div class="tabs-wrapper">
-        <div class="tabs-content">
+        <div class="tabs-content" data-aos="fade-right"
+        data-aos-duration="1000"
+        data-aos-easing="ease-in-sine">
           <div class="icon-box">
             <i class="ri-first-aid-kit-line"></i>
           </div>
           <h3>Leading edge care for Your family</h3>
           <p>Esteem spirit temper too say adieus who direct esteem. It esteems luckily picture placing drawing. Apartments frequently or motionless on reasonable projecting expression.</p>
         </div>
-        <div class="img-box">
+        <div class="img-box" data-aos="fade-left"
+        data-aos-duration="1000"
+        data-aos-easing="ease-in-sine">
           <img src="./img/tabs-img.webp" alt="">
         </div>
       </div>
@@ -221,10 +241,14 @@
   <!-- Expart Section Start -->
   <section class="expart-section">
     <div class="container">
-      <div class="title-box">
+      <div class="title-box" 
+      data-aos="fade-up"
+      data-aos-duration="1000">
         <h2>Expart Doctors</h2>
       </div>
-      <div class="expart-wrapper">
+      <div class="expart-wrapper" 
+      data-aos="fade-up"
+      data-aos-duration="1000">
         <div class="item-box">
           <img src="./img/expart-1.webp" alt="">
           <h3>Mirazul Alom</h3>
@@ -327,6 +351,9 @@
 
 
 
-    
+  <!-- Animete On Scroll Js File Link -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <!-- JavaScirpt file link -->
+  <script src="./script.js"></script>
 </body>
 </html>
